# CV-Role-Match-Analyzer

./: .gitignore  README.md  pyproject.toml  setup.cfg
chats/: testing_LLM_interactions
samples/: sample_role.txt
src/cv_to_role_analyzer/: cv_analyzer.py  llm.py  report.py  utils.py  validation.py
tests/system/: test_system.py
tests/unit/: test_analyze_match.py
