[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cv_to_role_analyzer"
version = "0.1.0"
description = "Analyzes CVs against job descriptions."
dependencies = [
    "click",
    "google-genai",
    "python-dotenv",
    "pytest",
    "pytest-mock",
    "pypdf"
]

[tool.setuptools]
packages = ["cv_to_role_analyzer"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
cv-analyzer = "cv_to_role_analyzer.cv_analyzer:CVAnalyzer.analyze_cli"
